      - Added ConverterService#toRepresentation(Object, Variant) convenience method.
      - Added static Resource#toInteger, toFloat, toByte, toLong, toDouble, toBoolean 
        methods accepting 'null' string values to facilitate the processing of path 
        variables and query parameters.
      - Renamed StatusService methods from getRepresentation(...) and getStatus(...) to
        toRepresentation(...) and toStatus(...).
      - Added org.restlet.resource.@Status annotation type to automatically convert
        Throwable Java classes between HTTP statuses and error response entities.
        NOTE: implementation is in progress.
      - StatusService.toStatus(Throwable, ...) methods now support @Status annotations
        to set the proper code.
 
    - Bug fixed
      - ObjectRepresentation wasn't closing a Decoder in case reading exceptions occured.    
      - ServerResource#doCatch() method wasn't invoking StatusService to set the error
        representation if empty.

- 2.3 Milestone 2 (05/06/2014)
    - New features
      - APISpark extension now includes an Introspector service (see main method) that
        can analyze a Restlet Application, introspect its web API definition and push
        it to APISpark.com PaaS for online and intuive documentation. Added user guide
        page to describe the process and parameters. API contract can be created or
        updated (replaced) remotely.
        
    - Enhancements
      - Added HTTPS support to Jetty connector. Issue #793.
        Contributed by Tal Liron.
      - ServletWarEntity and ZipEntryEntity ignore the timeToLive parameter. Issue #866.
        Reported and contributed by Jeremy Gustie.
      - ServletWarEntity is limited to file system modification dates. Issue #868.
        Reported and contributed by Jeremy Gustie.
      
    - Bug fixed
      - Added copy of Servlet request parameters to the Restlet request attributes. Issue #741.