@@ -45,6 +45,7 @@ import org.restlet.engine.util.StringUtils;
 import org.restlet.representation.Representation;
 import org.restlet.representation.StringRepresentation;
 import org.restlet.routing.Filter;
+import org.restlet.service.ConverterService;
 import org.restlet.service.StatusService;
 
 // [excludes gwt]
@@ -132,14 +133,14 @@ public class StatusFilter extends Filter {
         // Do we need to get a representation for the current status?
         if (response.getStatus().isError()
                 && ((response.getEntity() == null) || isOverwriting())) {
-            response.setEntity(toRepresentation(response.getStatus(), request,
-                    response));
+            response.setEntity(toRepresentation(response.getStatus(), null,
+                    request, response));
         }
     }
 
     /**
      * Handles the call by distributing it to the next Restlet. If a throwable
-     * is caught, the {@link #getStatus(Throwable, Request, Response)} method is
+     * is caught, the {@link #toStatus(Throwable, Request, Response)} method is
      * invoked.
      * 
      * @param request
@@ -153,10 +154,31 @@ public class StatusFilter extends Filter {
         // Normally handle the call
         try {
             super.doHandle(request, response);
-        } catch (Throwable t) {
-            getLogger().log(Level.WARNING,
-                    "Exception or error caught in status service", t);
-            response.setStatus(getStatus(t, request, response));
+        } catch (Throwable throwable) {
+            Level level = Level.INFO;
+            Status status = getStatusService().toStatus(throwable, request,
+                    response);
+
+            if (status.isServerError()) {
+                level = Level.WARNING;
+            } else if (status.isConnectorError()) {
+                level = Level.INFO;
+            } else if (status.isClientError()) {
+                level = Level.FINE;
+            }
+
+            getLogger().log(level,
+                    "Exception or error caught by status service", throwable);
+
+            if (response != null) {
+                response.setStatus(status);
+
+                if ((response.getEntity() == null) || isOverwriting()) {
+                    response.setEntity(getStatusService().toRepresentation(
+                            status, throwable, request, response,
+                            getApplication().getConverterService()));
+                }
+            }
         }
 
         return CONTINUE;
@@ -170,6 +192,16 @@ public class StatusFilter extends Filter {
      */
     public String getContactEmail() {
         return contactEmail;
+    }
+
+    /**
+     * Returns the converter service of the application if available or null.
+     * 
+     * @return The converter service of the application if available or null.
+     */
+    public ConverterService getConverterService() {
+        return (getApplication() == null) ? null : getApplication()
+                .getConverterService();
     }
 
     /**
@@ -253,14 +285,15 @@ public class StatusFilter extends Filter {
     @Deprecated
     protected Representation getRepresentation(Status status, Request request,
             Response response) {
-        return toRepresentation(status, request, response);
+        return toRepresentation(status, null, request, response);
     }
 
     /**
      * Returns a status for a given exception or error. By default it returns an
      * {@link Status#SERVER_ERROR_INTERNAL} status including the related error
      * or exception and logs a severe message.<br>
-     * In order to customize the default behavior, this method can be overriden.
+     * In order to customize the default behavior, this method can be
+     * overridden.
      * 
      * @param throwable
      *            The exception or error caught.
@@ -274,7 +307,7 @@ public class StatusFilter extends Filter {
     @Deprecated
     protected Status getStatus(Throwable throwable, Request request,
             Response response) {
-        return getStatusService().toStatus(throwable, request, response);
+        return toStatus(throwable, request, response);
     }
 
     /**
@@ -356,19 +389,21 @@ public class StatusFilter extends Filter {
      * 
      * @param status
      *            The status to represent.
+     * @param throwable
+     *            The exception or error caught.
      * @param request
      *            The request handled.
      * @param response
      *            The response updated.
      * @return The representation of the given status.
      */
-    protected Representation toRepresentation(Status status, Request request,
-            Response response) {
+    protected Representation toRepresentation(Status status,
+            Throwable throwable, Request request, Response response) {
         Representation result = null;
 
         try {
-            result = getStatusService().toRepresentation(status, request,
-                    response);
+            result = getStatusService().toRepresentation(status, throwable,
+                    request, response, getConverterService());
         } catch (Exception e) {
             getLogger().log(Level.WARNING,
                     "Unable to get the custom status representation", e);
@@ -397,6 +432,6 @@ public class StatusFilter extends Filter {
      */
     protected Status toStatus(Throwable throwable, Request request,
             Response response) {
-        return getStatus(throwable, request, response);
+        return getStatusService().toStatus(throwable, request, response);
     }
 }
